<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.CompleteProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_font_size"
            android:text="Complete Profile"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed-medium"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="@dimen/defalut_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <com.google.android.material.textfield.TextInputLayout
            app:hintEnabled="false"
            app:boxBackgroundMode="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/edit_txt_fname"
                android:drawablePadding="@dimen/defalut_padding"
                android:hint="@string/hint_first_name"
                android:layout_marginBottom="@dimen/defalut_margin"
                android:padding="@dimen/edit_txt_padding"
                android:background="@drawable/edit_txt_bg"
                android:inputType="textPersonName"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            app:hintEnabled="false"
            app:boxBackgroundMode="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/edit_txt_lname"
                android:drawablePadding="@dimen/defalut_padding"
                android:hint="@string/hint_last_name"
                android:layout_marginBottom="@dimen/defalut_margin"
                android:padding="@dimen/edit_txt_padding"
                android:inputType="textPersonName"
                android:background="@drawable/edit_txt_bg"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            app:hintEnabled="false"
            app:boxBackgroundMode="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/edit_txt_emil"
                android:drawableLeft="@drawable/ic_outline_email_24"
                android:drawablePadding="@dimen/defalut_padding"
                android:hint="@string/hint_email"
                android:layout_marginBottom="@dimen/defalut_margin"
                android:padding="@dimen/edit_txt_padding"
                android:background="@drawable/edit_txt_bg"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            app:hintEnabled="false"
            app:boxBackgroundMode="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/edit_txt_phone"
                android:drawableLeft="@drawable/ic_outline_phone_android_24"
                android:drawablePadding="@dimen/defalut_padding"
                android:hint="@string/hint_phone"
                android:layout_marginBottom="@dimen/defalut_margin"
                android:padding="@dimen/edit_txt_padding"
                android:inputType="phone"
                android:background="@drawable/edit_txt_bg"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_login"
            android:textAllCaps="false"
            android:layout_width="@dimen/btn_width"
            android:paddingLeft="@dimen/defalut_padding"
            android:paddingRight="@dimen/defalut_padding"
            android:layout_height="@dimen/btn_height"
            android:layout_gravity="center"
            android:layout_margin="@dimen/defalut_margin"
            android:background="@drawable/round_btn_bg"
            android:text="@string/hint_create_profile"
            android:textColor="@color/white"
            android:onClick="btn_create_profile_onClick"
            app:backgroundTint="@color/primaryColor" />
    </LinearLayout>
</RelativeLayout>